argocd/applications/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: app
spec:
  selector:
    app: app
  ports:
    - port: 3000
      targetPort: 3000
